<resources>
    <string name="app_name">My Application</string>
    <string name="film_image">Film Image</string>
    <string name="year">Год:</string>
    <string name="min">мин</string>
    <string name="rating">Оценка:</string>
    <string name="film_rating_image">Film Rating Image</string>
    <string name="film_year_icon">Film Year Icon</string>
    <string name="actor_image">Actor image</string>
    <string name="actors">Actors</string>
    <string name="ActorsClick">image_click</string>
    <string name="showActors">Посмотреть актёров:</string>
    <string name="in_role">в роли</string>
    <string name="film_rating_budget">Film Rating</string>
    <string name="film_votes_image">Film Votes</string>
    <string name="film_revenue_image">Film Revenue</string>
    <string name="budget">бюджет $</string>
    <string name="votes">голосов</string>
    <string name="revenue">$ сборы</string>
    <string name="popular">Популярное</string>
    <string name="TopRated">Высокооценённые</string>
</resources>