<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/film_popular_details_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/detail_fragment_bg"
    android:orientation="vertical">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iw_popular_film_image"
        android:layout_width="410dp"
        android:layout_height="580dp"
        android:contentDescription="@string/film_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tw_popular_film_name"
        style="@style/FilmNameDescriptionFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iw_popular_film_image"
        tools:text="Film Name" />

    <TextView
        android:id="@+id/tw_text_actors"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/showActors"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tw_popular_film_year"
        app:layout_constraintTop_toTopOf="@+id/popular_film_year_image_description_fragment"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/iw_cast_click"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/actors"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tw_text_actors"
        app:layout_constraintEnd_toEndOf="@+id/tw_text_actors"
        app:layout_constraintStart_toStartOf="@+id/tw_text_actors"
        android:contentDescription="@string/ActorsClick" />

    <ImageView
        android:id="@+id/rating_popular_image_description_fragment"
        style="@style/FilmAttributesIconDescriptionFragment"
        android:background="@drawable/ic_film_rating"
        android:contentDescription="@string/film_rating_image"
        app:layout_constraintBottom_toTopOf="@+id/tw_popular_film_description"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tw_popular_film_rating"
        style="@style/FilmAttributesTextDescriptionFragment"
        app:layout_constraintStart_toEndOf="@id/rating_popular_image_description_fragment"
        app:layout_constraintTop_toTopOf="@id/rating_popular_image_description_fragment"
        tools:text="Film Rating" />

    <ImageView
        android:id="@+id/popular_time_length_image_description_fragment"
        style="@style/FilmAttributesIconDescriptionFragment"
        android:background="@drawable/ic_film_time_length"
        android:contentDescription="@string/film_rating_image"
        app:layout_constraintBottom_toTopOf="@id/rating_popular_image_description_fragment"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tw_popular_film_time"
        style="@style/FilmAttributesTextDescriptionFragment"
        app:layout_constraintStart_toEndOf="@id/popular_time_length_image_description_fragment"
        app:layout_constraintTop_toTopOf="@id/popular_time_length_image_description_fragment"
        tools:text="Film Time" />

    <ImageView
        android:id="@+id/popular_film_year_image_description_fragment"
        style="@style/FilmAttributesIconDescriptionFragment"
        android:background="@drawable/ic_film_year"
        android:contentDescription="@string/film_year_icon"
        app:layout_constraintBottom_toTopOf="@id/popular_time_length_image_description_fragment"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tw_popular_film_year"
        style="@style/FilmAttributesTextDescriptionFragment"
        app:layout_constraintStart_toEndOf="@id/popular_film_year_image_description_fragment"
        app:layout_constraintTop_toTopOf="@id/popular_film_year_image_description_fragment"
        tools:text="Film Year" />

    <TextView
        android:id="@+id/tw_popular_film_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="500dp"
        android:scrollbarTrackVertical="@color/cast_stroke_color"
        android:scrollbars="vertical"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iw_popular_film_image"
        tools:text="Film Description" />

</androidx.constraintlayout.widget.ConstraintLayout>